Bug 456919 - Unable to re-activate color picker
Summary: Unable to re-activate color picker
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.3
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-19 14:49 UTC by Mayeul C.
Modified: 2022-08-07 08:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mayeul C. 2022-07-19 14:49:34 UTC
SUMMARY

I played around with undocking the color picker some time ago, under sway/wayland.
I closed it, but I cannot toggle it back on, there is no menu option.

Configuration⇾Toolbars should include the color picker.


STEPS TO REPRODUCE
1. Under sway, unlock the toolbars
2. Drag one of them, it becomes a pop-up window that you can drag around (by pressing meta, as the drag area doesn't work) and with no borders, but that you cannot reattach.
3. Close the toolbox window with the sway shortcut.
4. You cannot re-enable the color toolbox, though you can for most others.

It should probably work under plasma/wayland or plasma as well.

OBSERVED RESULT

Once closed, the color picker toolbox cannot be opened again.

Toolboxes cannot be docked again, at least under sway.

EXPECTED RESULT

At least put a toggle to make the toolbox appear again.
Maybe also add a button to reset the default toolbox positions and assortment.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Sway, Arch Linux x86_64
KDE Frameworks Version: 5.96.0-1
Qt Version:  5.15.5

ADDITIONAL INFORMATION
wayland-egl
Comment 1 Martin Koller 2022-08-07 08:31:46 UTC
As a workaround, when kolourpaint is not running, edit ~/.config/kolourpaintrc and remove the line
starting with
State=
in the section [MainWindow]
Comment 2 Martin Koller 2022-08-07 08:42:30 UTC
Git commit b7708ae4cdef76385d24143be63be9512e4f1e85 by Martin Koller.
Committed on 07/08/2022 at 08:41.
Pushed by mkoller into branch 'master'.

Avoid closing the color toolbar also via (e.g. Alt-F4) shortcut

M  +3    -1    widgets/toolbars/kpColorToolBar.h

https://invent.kde.org/graphics/kolourpaint/commit/b7708ae4cdef76385d24143be63be9512e4f1e85