Avoid closing the color toolbar also via (e.g. Alt-F4) shortcut

BUG: 456919